# carambolage

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
doc/carambolage/: all.html  get_options.v.html  index.html  match_options.v.html  sidebar-items.js
doc/carambolage/game/: Game.t.html  GameSettings.t.html  error_callback.v.html  fn.error_callback.html  index.html  sidebar-items.js  struct.Game.html  type.Event.html
doc/carambolage/grphx/: index.html  sidebar-items.js
doc/carambolage/physx/: index.html
doc/carambolage/util/: Lerp.t.html  index.html  sidebar-items.js  trait.Lerp.html
docs/: aliases.js  search-index.js
docs/carambolage/: fn.get_options.html  fn.main.html  fn.match_options.html  index.html  sidebar-items.js
docs/carambolage/game/: Event.t.html  fn.error_callback.html  index.html  sidebar-items.js  struct.Game.html  struct.GameSettings.html  type.Event.html
docs/carambolage/grphx/: index.html  sidebar-items.js
docs/carambolage/physx/: index.html
docs/carambolage/util/: index.html
docs/src/carambolage/: main.rs.html
res/models/: c03-farara.mtl  c04.mtl
res/models/maps/: race_track_1  race_track_1.col  race_track_2  race_track_2.col
res/shaders/: car.fs  car.vs  default.fs  post_proc.fs  post_proc.vs  tile.fs  tile.vs
src/: main.rs  scene.rs
src/game/: camera.rs  car.rs  controller.rs  level.rs  map.rs  mesh.rs  mod.rs  model.rs  scene.rs  shader.rs  texture.rs  tile.rs  transform.rs  wheel.rs
src/grphx/: camera.rs  framebuffer.rs  material.rs  mesh.rs  mod.rs  model.rs  screen.rs  shader.rs  texture.rs
src/gui/: game_ui.rs  main_menu_ui.rs  mod.rs
src/util/: framelimiter.rs  mod.rs
(+114 files in other folders)
