[package]
name = "carambolage"
version = "0.1.0"
authors = [
    "Fabian Drinck <fabian.drinck@rwth-aachen.de>",
    "Stephan Schauerte <stephan@schauerte.online>"
]
edition = "2018"

[dependencies]
getopts = "^0.2"
gl = "^0.11"
glfw = "^0.26"
image = "^0.21"
ncollide3d = "^0.17"
rodio = "~0.8"
time = "~0.1"
tobj = "~0.1"
log = "~0.4"
simplelog = "~0.5"
serde = "^1.0"
serde_derive = "^1.0"
imgui = "^0.0.21"
imgui-glfw-rs = "^0.2"
imgui-opengl-renderer = "^0.3"


[dependencies.nalgebra]
version = "^0.16"
features = ["serde-serialize"]


[profile.release]
lto = true
